--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -408,7 +408,8 @@ h2#footer-sec-heading {
         padding-bottom: 0px !important;
         padding-left: 10px;
         padding-right: 10px;
-        width: 100%;
+        /* width: 100%; */
+        width: 94%;
         float: left;
     }
 }
@@ -565,5 +566,16 @@ ul.nimonics_icons li {
 @media only screen and (max-width:543px){
 .site-footer .block_newsletter .site-footer__newsletter .title_block {
     font-size: 17px;
+}
+}
+
+
+@media only screen and (max-width:320px){
+.site-footer .block_newsletter .input-group .input-group__field {
+    padding-right: 105px;
+}
+.site-footer .footer-container {
+    padding-left: 0px;
+    padding-right: 0px;
 }
 }
