--- a/src/css/header.css
+++ b/src/css/header.css
@@ -753,6 +753,15 @@ img.mob_badge_image_twenty {
 }
 }
 
+
+@media only screen and (max-width:320px){
+#_desktop_search .search-info .search-header__submit, #_mobile_search .search-info .search-header__submit {
+    right: -8px;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+}
+}
+
 span.cart-logo.hidden-lg-down img {
     height: 22px;
     width: 23px;
