--- a/src/css/CollectionNav.css
+++ b/src/css/CollectionNav.css
@@ -1,25 +1,73 @@
 .collection-product-container {
     padding: 50px;
 }
+h1.product-heading {
+    font-size: 28px;
+    font-weight: 400;
+    font-family: Poppins;
+}
+.srtngprdts {
+    display: flex;
+    justify-content: space-between;
+    padding: 10px 15px;
+    background-color: #f5f5f5;
+    margin-bottom: 15px;
+    line-height: 1.25em;
+}
+.sorting-controls {
+    align-items: center;
+    display: flex;
+}
+.sorting-controls label {
+    margin-right: 10px;
+    font-size: 14px;
+    display: inline-block;
+    font-weight: 400;
+    padding-right: 15px;
+    color: #7a7a7a;
+    font-family: Poppins;
+}
+select#sortOrder{
+    font-size: 14px;
+    font-weight: 400;
+    margin-right: 0;
+    min-width: 290px;
+    position: relative;
+    padding: 6px 10px;
+    line-height: 22px;
+    border: 1px solid rgba(0, 0, 0, .1);
+    z-index: 1;
+    color: #acaaa6;
+    background-color: #ffffff80;
+    border-radius: 12px;
+}
+.noprtds p{
+    color: #323;
+    font-weight: 300;
+    font-size: 14px;
+    letter-spacing: .8px;
+    line-height: 20px;
+    font-family: 'Poppins';
+}
 
 .product-heading {
     font-size: 2rem;
-    text-align: right;
-    color: #333;
+    text-align: center;
+    color: #000;
     margin-bottom: 8px;
-    padding-right: 263px;
+    /* padding-right: 263px; */
     font-weight: 300;
 }
 
 .product-grid {
-    margin-left: 255px;
+    /* margin-left: 255px; */
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     gap: 55px;
     padding: 20px;
     /* margin: 0 auto; */
-    max-width: 1200px;
-    margin-right: 255px;
+    /* max-width: 1200px; */
+    /* margin-right: 255px; */
 }
 
 .product-card {
@@ -29,13 +77,14 @@
     text-align: center;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
     overflow: hidden;
+    border: 0;
 
 }
 
-.product-card:hover {
+/* .product-card:hover {
     transform: translateY(-5px);
     box-shadow: 0 10px 15px rgba(0, 0, 0, 0.2);
-}
+} */
 
 .product-image {
     width: 100%;
@@ -48,19 +97,25 @@
     font-size: 14px;
     font-weight: 400;
     margin-top: 15px;
-    color: #333;
+    color: #000;
     transition: color 0.3s ease;
+    font-family: poppins;
+    line-height: 18px;
+}
+a.product-card-link {
+    text-decoration: unset;
 }
 
-.product-name:hover {
+/* .product-name:hover {
     color: #007bff;
-}
+} */
 
 .product-price {
-    font-size: 15px !important;
-    font-weight: 500;
-    color: #565656 !important;
+    font-size: 14px !important;
+    font-weight: 400;
+    color: #000;
     margin: 10px 0 !important;
+    font-family: 'Poppins'
 }
 
 .sorting-container {
