--- a/src/css/ProductSlider.css
+++ b/src/css/ProductSlider.css
@@ -10,6 +10,51 @@
     padding: 16px;
 }
 
+.add-to-cart-btn {
+    background-color: #4876bb;
+    color: white;
+    border: none;
+    padding: 10px 15px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 14px;
+    margin-top: 10px;
+    transition: background-color 0.3s ease;
+    font-family: Poppins;
+    border-radius: 10px;
+    text-transform: uppercase;
+    letter-spacing: .5px;
+    font-weight: 600;
+    font-size:13px;
+}
+
+.add-to-cart-btn:hover {
+    background-color: #4876bb;
+}
+
+.cart-container {
+    margin-top: 20px;
+    padding: 15px;
+    background-color: #f8f9fa;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+}
+
+.cart-container h3 {
+    margin-bottom: 10px;
+}
+
+.cart-container ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+.cart-container li {
+    margin-bottom: 5px;
+}
+
+
+
 .product-card {
     text-decoration: none;
     display: block;
@@ -135,10 +180,9 @@
     transition: transform 0.3s ease;
 }
 
-.product-card:hover {
+/* .product-card:hover {
     transform: scale(1.05);
-    /* Slight zoom effect on hover */
-}
+} */
 
 .product-image {
     width: 100%;
