--- a/src/css/HeaderSearch.css
+++ b/src/css/HeaderSearch.css
@@ -33,7 +33,7 @@
 }
 
 .product-card_2 p {
-    font-size: 7px;
+    font-size: 12px;
     font-weight: 600;
     margin-bottom: 10px;
     color: #333;
@@ -42,6 +42,10 @@
     padding-left: 10px;
     text-align: center;
     align-items: center;
+    width: 200px; /* Set the desired width */
+    white-space: nowrap; /* Prevent wrapping to the next line */
+    overflow: hidden; /* Hide the overflowing text */
+    text-overflow: ellipsis; 
 
 }
 
@@ -55,5 +59,6 @@
 @media screen and (max-width: 768px) {
     .product-card_2 {
         width: 100%;
+        gap:10px;
     }
 }
