--- a/src/css/header.css
+++ b/src/css/header.css
@@ -808,6 +808,9 @@ img.mob_badge_image_twenty {
         padding: 18px 8px;
         margin: 0;
     }
+    .tops_bar_Slider h4 {
+        font-size: 12px;
+    }
 }
 
 
