--- a/src/css/pdp_tabs.css
+++ b/src/css/pdp_tabs.css
@@ -33,6 +33,7 @@
     margin: 0 auto;
     border: 1px solid #e9e9e9;
     width: 100%;
+    padding:15px;
 }
 .pdp-tabs-buttons .active{
     background: black;
