--- a/src/css/header.css
+++ b/src/css/header.css
@@ -919,3 +919,67 @@ span.cart-logo.hidden-lg-down img {
     align-items: center;
     text-align: center;
 }
+
+
+.sidebar {
+    position: fixed;
+    top: 0;
+    left: -250px;
+    width: 250px;
+    height: 100%;
+    /* background-color: #333; */
+    background-color: #fff;
+    transition: left 0.3s ease;
+    z-index: 1000;
+}
+
+
+.sidebar-header {
+    text-align: right;
+    padding: 20px;
+}
+.sidebar-nav {
+    display: flex;
+    flex-direction: column;
+    padding-top: 20px;
+}
+
+@media only screen and (min-width:768px) {
+    .sidebar {
+        display: none;
+    }
+    }
+	@media only screen and (max-width:991px) {
+	
+	    .sidebar-nav a.nav-item{
+        float: left;
+        color: black;
+        line-height: 20px;
+        font-weight: 400;
+        font-size: 14px;
+        text-transform: uppercase;
+        font-family: Montserrat;
+        text-align: left;
+    }
+}
+
+
+@media only screen and (max-width:767px) {
+.sidebar-nav .nav-item {
+    color: #000;
+    text-decoration: none;
+    padding: 10px 20px;
+}
+.close-icon {
+    width: 25px;
+    height: 25px;
+    cursor: pointer;
+}
+.sidebar {
+    left: -250px;
+    transition: left 0.3s ease;
+}
+.sidebar.open {
+    left: 0;
+}
+}
